--- a/app/alpha/flaskr/templates/auth/login.html
+++ b/app/alpha/flaskr/templates/auth/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon"    type="image/png" href="../../static/img/logo_E-esprit.png">
+    <link rel="icon" type="image/png" href="../../static/img/logo_E-esprit.png">
     <link rel="stylesheet" href="../../static/css/Styles-Body.css">
     <link rel="stylesheet" href="../../static/css/page-login.css">
     <script src="../../static/js/theme.js"></script>
@@ -16,18 +16,25 @@
     </div>
     <div class="login-container">
         <h2>Connexion</h2>
-        <form action="" method="POST"> 
+        <form method="POST">
+            {{ form.hidden_tag() }}
             <div class="form-group">
-                <label for="username">Nom d'utilisateur / Adresse mail</label>
-                <input type="text" id="username" name="username" required>
+                <label for="username">{{ form.username.label.text }}</label>
+                {{ form.username(class="form-control", id="username", required=True, pattern="[A-Za-zÀ-ÖØ-Ýà-öø-ÿ0-9]+") }}
+                {% for error in form.username.errors %}
+                <span class="error">{{ error }}</span>
+                {% endfor %}
             </div>
             <div class="form-group">
-                <label for="password">Mot de passe</label>
-                <input type="password" id="password" name="password" required>
+                <label for="password">{{ form.password.label.text }}</label>
+                {{ form.password(class="form-control", id="password", required=True, pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@#$%^&*!])[A-Za-z\d@#$%^&*!]{8,}") }}
+                {% for error in form.password.errors %}
+                <span class="error">{{ error }}</span>
+                {% endfor %}
             </div>
-            <button type="submit">Se connecter</button>
+            {{ form.submit(class="btn btn-primary") }}
         </form>
-        <p class="signup-link">Pas encore de compte ? <a href="/sing-up">Inscrivez-vous</a></p>
+        <p class="signup-link">Pas encore de compte ? <a href="{{ url_for('register') }}">Inscrivez-vous</a></p>
     </div>
 </body>
 </html>
