--- a/app/alpha/flaskr/static/css/page-parametre.css
+++ b/app/alpha/flaskr/static/css/page-parametre.css
@@ -9,16 +9,17 @@ html, body {
 /* Body Styling */
 body {
   background-color: #f0f0f0;
-  font-family: 'Roboto', Arial, sans-serif;
-  font-size: 18px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: 60px 0;
-  height: calc(100% - 120px);
-  overflow-y: auto;
-  transition: background-color 0.3s, color 0.3s;
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	margin-top: 2px;
+	padding-top: 60px; /* Ajuste la hauteur du contenu pour tenir compte du header */
+	padding-bottom: 60px; /* Ajuste la hauteur du contenu pour tenir compte du footer */
+	overflow-y: auto; /* Permet le défilement vertical si le contenu est plus grand que l'écran */
+	height: calc(100% - 120px); /* Ajuste la hauteur pour prendre en compte le header et le footer */
 }
 
 body.dark {
@@ -29,12 +30,12 @@ body.dark {
 /* Header and Footer Styling */
 header, footer {
   background-color: #f0f0f0;
-  color: #000;
+  color: #000000;
   padding: 18px 0;
   text-align: left;
   position: fixed;
   width: 100%;
-  box-shadow: 0 2px 20px rgba(24, 24, 24, 0.1);
+  box-shadow: 0 2px 80px rgba(24, 24, 24, 0.1);
   z-index: 1000;
 }
 
@@ -45,11 +46,12 @@ body.dark header, body.dark footer {
 
 header {
   top: 0;
+  overflow: hidden;
   border-radius: 0 0 30px 30px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px;
+  justify-content: space-between; /* Adjust the alignment to properly place elements */
+  padding: 10px 20px; /* Add padding for some spacing inside the header */
 }
 
 header img.ta-pp {
@@ -58,6 +60,9 @@ header img.ta-pp {
   border-radius: 20%;
   object-fit: cover;
   margin-left: 1%;
+}
+header img.ta-pp:hover{
+  transform: scale(1.1);
 }
 
 .Name-page {
@@ -75,26 +80,46 @@ body.dark .Name-page {
 }
 
 footer {
-  bottom: 0;
+  bottom: 0; /* Ajouté pour que le footer soit en bas de page */
+  border-radius: 30px 30px 0 0; /* Arrondi les deux angles supérieurs */
+  overflow: hidden;
   display: flex;
-  justify-content: space-around;
-  border-radius: 30px 30px 0 0;
+  justify-content: space-between 5px;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
 }
 
-.footer-button {
-  background: none;
-  border: none;
-  cursor: pointer;
+.icone-friends,.icone-cam,.icone-discu,.icone-album,.icone-setting {
+	width: 30px; /* ajustez la largeur à votre convenance */
+	height: 30px; /* ajustez la hauteur à votre convenance */
+	/* border-radius: 100%; */
+	margin: 0 10px;
+	padding-left: 10px;
+	padding-right: 10PX;
+	transition: transform 0.2s ease-in-out;
+    opacity: 50%;
+    
+}
+  
+.icone-friends:hover,.icone-cam:hover,.icone-discu:hover,.icone-album:hover,.icone-setting:hover {
+    transform: scale(1.5); /* Augmente légèrement la taille au survol */
 }
 
-footer img {
-  width: 30px;
-  height: 30px;
-  transition: transform 0.2s ease-in-out;
-}
 
-footer img:hover {
-  transform: scale(1.2);
+.footer-button{
+	background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+}
+.footer-button img,.reglage-button img {
+    width: 30px; /* ajustez la largeur à votre convenance */
+    height: 30px; /* ajustez la hauteur à votre convenance */
+    transition: transform 0.2s ease-in-out;
 }
 
 /* Main Content Styling */
