--- a/app/alpha/flaskr/templates/searchfriends.html
+++ b/app/alpha/flaskr/templates/searchfriends.html
@@ -17,8 +17,8 @@
     </header>
 
     <div class="barrerecherche">
-        <input type="search" name="rechercheamis" placeholder="Taper le nom de votre ami ou ajouter un ami avec le +"/>
-        <button class="search-button"><img src="../static/img/ajouteramis.png" alt="search icon"></button>
+        <input type="search" name="rechercheamis" placeholder="Taper le nom d'utilisateur"/>
+        <button class="search-button"><img src="../static/img/recherche.png" alt="search icon"></button>
     </div>
 
 
