--- a/app/alpha/flaskr/static/css/page-login.css
+++ b/app/alpha/flaskr/static/css/page-login.css
@@ -98,3 +98,27 @@ button:hover {
     margin: 0;
     box-sizing: border-box;
 }
+
+.button-container {
+    display: flex;
+    justify-content: center; /* Centre horizontalement */
+    align-items: center; /* Centre verticalement */
+}
+
+.btn-primary {
+    background-color: #3498db;
+    padding: 10px 20px;
+    border-radius: 12px;
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.btn-primary:hover {
+    background-color: #2980b9;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+}
