--- a/app/alpha/flaskr/templates/auth/login.html
+++ b/app/alpha/flaskr/templates/auth/login.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../../static/img/logo_E-esprit.png">
-    <link rel="stylesheet" href="../../static/css/Styles-Body.css">
     <link rel="stylesheet" href="../../static/css/page-login.css">
     <script src="../../static/js/theme.js"></script>
     <title>Login | E-spirit</title>
@@ -32,7 +31,9 @@
                 <span class="error">{{ error }}</span>
                 {% endfor %}
             </div>
-            {{ form.submit(class="btn btn-primary") }}
+            <div class="button-container">
+                {{ form.submit(class="btn btn-primary") }}
+            </div>
         </form>
         <p class="signup-link">Pas encore de compte ? <a href="{{ url_for('register') }}">Inscrivez-vous</a></p>
     </div>
