--- a/app/alpha/flaskr/templates/album.html
+++ b/app/alpha/flaskr/templates/album.html
@@ -9,10 +9,12 @@
     <script src="../static/js/main.js"></script>
     <script src="../static/js/album.js"></script>
     <script src="../static/js/theme.js"></script>
+    <script src="../static/js/profil.js"></script>
 </head>
 <body class="slide-out" data-page="page4">
     <header>
-        <img src="../static/img/imagespp.jpeg" alt="Photo" class="ta-pp">
+        <img src="data:image/png;base64,{{ avatar_data.avatar }}" alt="Photo" class="ta-pp">
+        <h2 class="username"> {{ current_user.username }} </h2>
         <div class="Name-page">Album</div>
     </header>
 
@@ -42,6 +44,17 @@
         <button class="footer-button" onclick="pagealbum()"><img src="../static/img/album-photo.png" alt="icone-album" class="icone-album"></button>
         <button class="footer-button" onclick="pageparametre()"><img src="../static/img/parametres.png" alt="icone-setting" class="icone-setting"></button>
     </footer>
+
+    <div id="account-info-popup" class="popup hidden">
+        <div class="popup-content">
+            <span id="close-popup" class="close">&times;</span>
+            <img src="data:image/png;base64,{{ avatar_data.avatar }}" alt="photo" class="profil">
+            <h2>Informations du Compte</h2>
+            <p id="username"></p>
+            <p id="userNom">Nom : ...</p>
+            <p id="userPrenom">Prénom : ...</p>
+        </div>
+    </div>   
 
     <script>function pagealbumtest() {
         window.location.href = "/album-photo";
