--- a/app/alpha/flaskr/templates/amis.html
+++ b/app/alpha/flaskr/templates/amis.html
@@ -9,10 +9,12 @@
     <script src="../static/js/main.js"></script>
     <script src="../static/js/theme.js"></script>
     <script src="../static/js/ami.js"></script>
+    <script src="../static/js/profil.js"></script>
 </head>
 <body class="slide-out" data-page="page1">
     <header>
-        <img src="../static/img/imagespp.jpeg" alt="Photo" class="ta-pp">
+        <img src="data:image/png;base64,{{ avatar_data.avatar }}" alt="Photo" class="ta-pp">
+        <h2 class="username"> {{ current_user.username }} </h2>
         <div class="Name-page">Amis</div>
     </header>
 
@@ -68,15 +70,6 @@
         </div>
     </ul>
 
-
-
-
-
-
-
-
-
-
     <footer>
         <button class="footer-button" onclick="pageamis()"><img src="../static/img/amis.png" alt="icone-friends" class="icone-friends"></button>
         <button class="footer-button" onclick="pagecam()"><img src="../static/img/camera.png" alt="icone-cam" class="icone-cam"></button>
@@ -85,9 +78,15 @@
         <button class="footer-button" onclick="pageparametre()"><img src="../static/img/parametres.png" alt="icone-setting" class="icone-setting"></button>
     </footer>
 
-    <script src="../static/js/main.js"></script>
-
-    
-
+    <div id="account-info-popup" class="popup hidden">
+        <div class="popup-content">
+            <span id="close-popup" class="close">&times;</span>
+            <img src="data:image/png;base64,{{ avatar_data.avatar }}" alt="photo" class="profil">
+            <h2>Informations du Compte</h2>
+            <p id="username"></p>
+            <p id="userNom">Nom : ...</p>
+            <p id="userPrenom">Prénom : ...</p>
+        </div>
+    </div>   
 </body>
 </html>
