--- a/app/alpha/flaskr/templates/chat.html
+++ b/app/alpha/flaskr/templates/chat.html
@@ -8,10 +8,12 @@
     <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.png">
     <script src="../static/js/main.js"></script>
     <script src="../static/js/theme.js"></script> 
+    <script src="../static/js/profil.js"></script>
 </head>
 <body class="slide-out" data-page="page3">
     <header>
-        <img src="../static/img/imagespp.jpeg" alt="Photo" class="ta-pp">
+        <img src="data:image/png;base64,{{ avatar_data.avatar }}" alt="Photo" class="ta-pp">
+        <h2 class="username"> {{ current_user.username }} </h2>
         <div class="Name-page">Chat</div>
     </header>
 
@@ -51,8 +53,16 @@
         <button class="footer-button" onclick="pagealbum()"><img src="../static/img/album-photo.png" alt="icone-album" class="icone-album"></button>
         <button class="footer-button" onclick="pageparametre()"><img src="../static/img/parametres.png" alt="icone-setting" class="icone-setting"></button>
     </footer>
-    <script src="../static/js/main.js"></script>
    
-    
+    <div id="account-info-popup" class="popup hidden">
+        <div class="popup-content">
+            <span id="close-popup" class="close">&times;</span>
+            <img src="data:image/png;base64,{{ avatar_data.avatar }}" alt="photo" class="profil">
+            <h2>Informations du Compte</h2>
+            <p id="username"></p>
+            <p id="userNom">Nom : ...</p>
+            <p id="userPrenom">Prénom : ...</p>
+        </div>
+    </div>   
 </body>
 </html>
