--- a/alpha/flaskr/static/css/page-album.css
+++ b/alpha/flaskr/static/css/page-album.css
@@ -216,3 +216,99 @@ body.dark .grid-item {
     background: rgba(0, 0, 0, 0.5);
   }
   
+
+
+
+
+  body, input {
+    color: #00000041;
+    font: 1em "Helvetica Neue", Helvetica, sans-serif;
+    line-height: 1.5;
+  }
+
+  .toggle, .toggle:before, .slot__label, .curtain {
+    transition-property: background-color, transform, visibility;
+    transition-duration: 0.25s;
+    transition-timing-function: ease-in, cubic-bezier(0.6,0.2,0.4,1.5), linear;
+  }
+  .toggle:before, .slot, .slot__label {
+    display: block;
+  }
+  .toggle:before, .curtain {
+    position: absolute;
+  }
+  .toggle:checked, .curtain {
+    background-color: #d3d3d3;
+  }
+  .toggle:focus {
+    outline: transparent;
+  }
+  .toggle-container {
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+  }
+  
+  .toggle {
+    border-radius: 0.75em;
+    box-shadow: 0 0 0 0.1em inset;
+    cursor: pointer;
+    position: relative;
+    width: 3em;
+    height: 1.5em;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    -webkit-tap-highlight-color: transparent;
+    margin: 0;
+    position: absolute;
+    top: 50%; /* centre verticalement */
+    left: 54%; /* centre horizontalement */
+    transform: translate(-50%, -50%); /* ajuste la position pour centrer le texte */
+  }
+  .toggle:before {
+    background: currentColor;
+    border-radius: 50%;
+    content: "";
+    top: 0.2em;
+    left: 0.2em;
+    width: 1.1em;
+    height: 1.1em;
+  }
+  .toggle:checked:before {
+    transform: translateX(1.5em);
+  }
+  .toggle:checked ~ .slot .slot__label, .slot__label:nth-child(2) {
+    transform: translateY(-50%) scaleY(0);
+  }
+  .toggle:checked ~ .slot .slot__label:nth-child(2) {
+    transform: translateY(-100%) scaleY(1);
+  }
+  .toggle:checked ~ .curtain {
+    transform: scaleX(1);
+  }
+  .slot {
+    color: transparent;
+    font-size: 1.5em;
+    font-weight: bold;
+    letter-spacing: 0.1em;
+    line-height: 1;
+    overflow: hidden;
+    height: 1em;
+  
+    -webkit-text-stroke: 0.05em #000000;
+    position: absolute;
+    top: 50%; /* centre verticalement */
+    left: 58.5%; /* centre horizontalement */
+    transform: translate(-50%, -50%); /* ajuste la position pour centrer le texte */
+  }
+  .slot__label {
+    transform-origin: 50% 0;
+  }
+  .slot__label:nth-child(2) {
+    transform-origin: 50% 100%;
+  }
+  
