--- a/alpha/flaskr/templates/albumquests.html
+++ b/alpha/flaskr/templates/albumquests.html
@@ -15,7 +15,7 @@
     <header>
         <img src="data:image/png;base64,{{ avatar_data.avatar }}" alt="Photo" class="ta-pp">
         <h2 class="username"> {{ current_user.username }} </h2>
-        <div class="Name-page">Album</div>
+        <div class="Name-page">Album</div>>
         <input id="toggle" class="toggle" type="checkbox" role="switch" name="toggle" value="on">
         <label for="toggle" class="slot">
             <span class="slot__label">PHOTO</span>
