--- a/alpha/flaskr/templates/album.html
+++ b/alpha/flaskr/templates/album.html
@@ -75,6 +75,10 @@
     window.location.href = "/album"; // Replace with the URL of the photo page
   }
     });
+    document.addEventListener("DOMContentLoaded", function() {
+    const toggle = document.getElementById('toggle');
+    toggle.checked = false; // Set the toggle state to "on" by default
+  });
     
     
     </script>
