--- a/alpha/flaskr/templates/parametres.html
+++ b/alpha/flaskr/templates/parametres.html
@@ -23,10 +23,12 @@
         <div class="settings-list">
             <div class="setting-item">
                 <span class="setting-name">Apparence</span>
-                <select id="color-page">
-                    <option value="white">Clair</option>
-                    <option value="dark">Foncé</option>
-                </select>
+                <div class="custom-select" style="width:200px;">
+                    <select id="color-page">
+                        <option value="white">Clair</option>
+                        <option value="dark">Foncé</option>
+                    </select>
+                </div>
             </div>
             <div class="setting-item">
                 <span class="setting-name">Géolocalisation</span>
